--- a/src/pl/css/mainStyle.css
+++ b/src/pl/css/mainStyle.css
@@ -9,3 +9,41 @@
     -fx-green: #198754;
     -fx-dirty-white: #e9e9e9;
 }
+.base-background{
+    -fx-background-color:#17263a;
+}
+
+.common-text-colour{
+    -fx-text-fill: #e9e9e9;
+
+}
+
+.common-text-font{
+    -fx-font-family: Inter;
+}
+
+.canvas-background{
+    -fx-fill: #e9e9e9;
+}
+
+.background{
+    -fx-background-color:#e84910;
+}
+
+.positive-button{
+    -fx-background-color: #198754;
+}
+
+.neutral-button{
+    -fx-background-color: #e9e9e9;
+}
+
+.negative-button{
+    -fx-background-color:#dc3545;
+
+}
+
+.project-button{
+    -fx-background-color:#333;
+
+}
