--- a/src/pl/fxml/TechnicianView.fxml
+++ b/src/pl/fxml/TechnicianView.fxml
@@ -11,9 +11,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="423.0" prefWidth="770.0" styleClass="base-background" stylesheets="@../css/mainStyle.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.controllers.ProjectViewController">
+<AnchorPane prefHeight="423.0" prefWidth="770.0" styleClass="base-background" stylesheets="@../css/MainStyle.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.controllers.ProjectViewController">
    <children>
-      <TableView fx:id="projectTableView" layoutX="14.0" layoutY="52.0" prefHeight="349.0" prefWidth="549.0" stylesheets="@../css/mainStyle.css">
+      <TableView fx:id="projectTableView" layoutX="14.0" layoutY="52.0" prefHeight="349.0" prefWidth="549.0" stylesheets="@../css/MainStyle.css">
         <columns>
           <TableColumn prefWidth="127.0" text="Customer Name" />
           <TableColumn prefWidth="164.0" text="Customer Location" />
@@ -24,34 +24,34 @@
       </TableView>
       <VBox alignment="TOP_CENTER" layoutX="579.0" layoutY="89.0" prefHeight="312.0" prefWidth="190.0" spacing="20.0">
          <children>
-            <Button fx:id="createBtn" mnemonicParsing="false" prefHeight="25.0" prefWidth="125.0" stylesheets="@../css/mainStyle.css" text="Create Project">
+            <Button fx:id="createBtn" mnemonicParsing="false" prefHeight="25.0" prefWidth="125.0" stylesheets="@../css/MainStyle.css" text="Create Project">
                <styleClass>
                   <String fx:value="positive-button" />
                   <String fx:value="common-text-colour" />
                   <String fx:value="common-text-font" />
                </styleClass></Button>
-            <Button fx:id="updateBtn" mnemonicParsing="false" prefWidth="125.0" stylesheets="@../css/mainStyle.css" text="Update Project">
+            <Button fx:id="updateBtn" mnemonicParsing="false" prefWidth="125.0" stylesheets="@../css/MainStyle.css" text="Update Project">
                <styleClass>
                   <String fx:value="background" />
                   <String fx:value="common-text-colour" />
                   <String fx:value="common-text-font" />
                </styleClass></Button>
-            <Button fx:id="previewBtn" mnemonicParsing="false" prefWidth="125.0" stylesheets="@../css/mainStyle.css" text="Preview Document">
+            <Button fx:id="previewBtn" mnemonicParsing="false" prefWidth="125.0" stylesheets="@../css/MainStyle.css" text="Preview Document">
                <styleClass>
                   <String fx:value="neutral-button" />
                   <String fx:value="common-text-font" />
                </styleClass></Button>
-            <Button fx:id="saveBtn" mnemonicParsing="false" prefWidth="125.0" stylesheets="@../css/mainStyle.css" text="Save Document">
+            <Button fx:id="saveBtn" mnemonicParsing="false" prefWidth="125.0" stylesheets="@../css/MainStyle.css" text="Save Document">
                <styleClass>
                   <String fx:value="neutral-button" />
                   <String fx:value="common-text-font" />
                </styleClass></Button>
-            <Button fx:id="sendBtn" mnemonicParsing="false" prefWidth="125.0" stylesheets="@../css/mainStyle.css" text="Send As Email">
+            <Button fx:id="sendBtn" mnemonicParsing="false" prefWidth="125.0" stylesheets="@../css/MainStyle.css" text="Send As Email">
                <styleClass>
                   <String fx:value="neutral-button" />
                   <String fx:value="common-text-font" />
                </styleClass></Button>
-            <Button fx:id="deleteBtn" mnemonicParsing="false" prefWidth="125.0" stylesheets="@../css/mainStyle.css" text="Delete Project">
+            <Button fx:id="deleteBtn" mnemonicParsing="false" prefWidth="125.0" stylesheets="@../css/MainStyle.css" text="Delete Project">
                <VBox.margin>
                   <Insets top="40.0" />
                </VBox.margin>
@@ -68,9 +68,9 @@
       </VBox>
       <TextField fx:id="searchField" layoutX="579.0" layoutY="52.0" />
       <Button fx:id="searchBtn" layoutX="731.0" layoutY="52.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" text="?" />
-      <HBox alignment="CENTER_LEFT" layoutY="-1.0" prefHeight="34.0" prefWidth="528.0" styleClass="project-button" stylesheets="@../css/mainStyle.css">
+      <HBox alignment="CENTER_LEFT" layoutY="-1.0" prefHeight="34.0" prefWidth="528.0" styleClass="project-button" stylesheets="@../css/MainStyle.css">
          <children>
-            <Button fx:id="allProjectsBtn" mnemonicParsing="false" prefHeight="25.0" prefWidth="115.0" stylesheets="@../css/mainStyle.css" text="All Projects">
+            <Button fx:id="allProjectsBtn" mnemonicParsing="false" prefHeight="25.0" prefWidth="115.0" stylesheets="@../css/MainStyle.css" text="All Projects">
                <HBox.margin>
                   <Insets />
                </HBox.margin>
@@ -80,19 +80,19 @@
                   <String fx:value="common-text-font" />
                </styleClass>
             </Button>
-            <Button fx:id="publicProjectsBtn" mnemonicParsing="false" prefHeight="25.0" prefWidth="147.0" stylesheets="@../css/mainStyle.css" text="Public Projects">
+            <Button fx:id="publicProjectsBtn" mnemonicParsing="false" prefHeight="25.0" prefWidth="147.0" stylesheets="@../css/MainStyle.css" text="Public Projects">
                <styleClass>
                   <String fx:value="project-button" />
                   <String fx:value="common-text-colour" />
                   <String fx:value="common-text-font" />
                </styleClass></Button>
-            <Button fx:id="privateProjectsBtn" mnemonicParsing="false" prefHeight="25.0" prefWidth="114.0" stylesheets="@../css/mainStyle.css" text="Private Projects">
+            <Button fx:id="privateProjectsBtn" mnemonicParsing="false" prefHeight="25.0" prefWidth="114.0" stylesheets="@../css/MainStyle.css" text="Private Projects">
                <styleClass>
                   <String fx:value="project-button" />
                   <String fx:value="common-text-colour" />
                   <String fx:value="common-text-font" />
                </styleClass></Button>
-            <Button fx:id="logoutBtn" mnemonicParsing="false" prefHeight="25.0" prefWidth="102.0" stylesheets="@../css/mainStyle.css" text="Logout">
+            <Button fx:id="logoutBtn" mnemonicParsing="false" prefHeight="25.0" prefWidth="102.0" stylesheets="@../css/MainStyle.css" text="Logout">
                <HBox.margin>
                   <Insets left="100.0" />
                </HBox.margin>
@@ -104,7 +104,7 @@
             </Button>
          </children>
       </HBox>
-      <Label fx:id="usernameLbl" alignment="CENTER" layoutX="528.0" layoutY="-1.0" prefHeight="34.0" prefWidth="149.0" stylesheets="@../css/mainStyle.css" text="Username">
+      <Label fx:id="usernameLbl" alignment="CENTER" layoutX="528.0" layoutY="-1.0" prefHeight="34.0" prefWidth="149.0" stylesheets="@../css/MainStyle.css" text="Username">
          <styleClass>
             <String fx:value="common-text-colour" />
             <String fx:value="common-text-font" />
@@ -113,7 +113,7 @@
          <children>
             <Button fx:id="minBtn" mnemonicParsing="false" text="_" />
             <Button fx:id="maxBtn" mnemonicParsing="false" text="[ ]" />
-            <Button fx:id="closeBtn" mnemonicParsing="false" styleClass="negative-button" stylesheets="@../css/mainStyle.css" text="X" />
+            <Button fx:id="closeBtn" mnemonicParsing="false" styleClass="negative-button" stylesheets="@../css/MainStyle.css" text="X" />
          </children>
       </HBox>
    </children>
