--- a/src/pl/fxml/ProjectView.fxml
+++ b/src/pl/fxml/ProjectView.fxml
@@ -12,11 +12,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
-<AnchorPane prefHeight="423.0" prefWidth="770.0" styleClass="base-background" stylesheets="@../css/mainStyle.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.controllers.ProjectViewController">
+<AnchorPane prefHeight="423.0" prefWidth="770.0" styleClass="base-background" stylesheets="@../css/MainStyle.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.controllers.ProjectViewController">
     <children>
-        <HBox alignment="CENTER_LEFT" layoutY="-1.0" prefHeight="34.0" prefWidth="528.0" styleClass="project-button" stylesheets="@../css/mainStyle.css">
+        <HBox alignment="CENTER_LEFT" layoutY="-1.0" prefHeight="34.0" prefWidth="528.0" styleClass="project-button" stylesheets="@../css/MainStyle.css">
             <children>
-                <Button fx:id="goBack" mnemonicParsing="false" prefHeight="25.0" prefWidth="30.0" stylesheets="@../css/mainStyle.css" text="←">
+                <Button fx:id="goBack" mnemonicParsing="false" prefHeight="25.0" prefWidth="30.0" stylesheets="@../css/MainStyle.css" text="←">
                     <HBox.margin>
                         <Insets left="10.0" />
                     </HBox.margin>
@@ -26,7 +26,7 @@
                   <String fx:value="common-text-font" />
                </styleClass>
                 </Button>
-                <Button fx:id="refnumField" mnemonicParsing="false" prefHeight="25.0" prefWidth="218.0" stylesheets="@../css/mainStyle.css" text="Reference Number">
+                <Button fx:id="refnumField" mnemonicParsing="false" prefHeight="25.0" prefWidth="218.0" stylesheets="@../css/MainStyle.css" text="Reference Number">
                <HBox.margin>
                   <Insets left="70.0" />
                </HBox.margin>
@@ -35,7 +35,7 @@
                   <String fx:value="common-text-colour" />
                   <String fx:value="common-text-font" />
                </styleClass></Button>
-                <Button fx:id="logoutBtn" mnemonicParsing="false" prefHeight="25.0" prefWidth="102.0" stylesheets="@../css/mainStyle.css" text="Logout">
+                <Button fx:id="logoutBtn" mnemonicParsing="false" prefHeight="25.0" prefWidth="102.0" stylesheets="@../css/MainStyle.css" text="Logout">
                     <HBox.margin>
                         <Insets left="100.0" />
                     </HBox.margin>
@@ -47,7 +47,7 @@
                 </Button>
             </children>
         </HBox>
-        <Label fx:id="usernameLbl" alignment="CENTER" layoutX="528.0" layoutY="-1.0" prefHeight="34.0" prefWidth="149.0" stylesheets="@../css/mainStyle.css" text="Username">
+        <Label fx:id="usernameLbl" alignment="CENTER" layoutX="528.0" layoutY="-1.0" prefHeight="34.0" prefWidth="149.0" stylesheets="@../css/MainStyle.css" text="Username">
          <styleClass>
             <String fx:value="common-text-colour" />
             <String fx:value="common-text-font" />
@@ -56,11 +56,11 @@
             <children>
                 <Button fx:id="minBtn" mnemonicParsing="false" text="_" />
                 <Button fx:id="maxBtn" mnemonicParsing="false" text="[ ]" />
-                <Button mnemonicParsing="false" styleClass="negative-button" stylesheets="@../css/mainStyle.css" text="X" />
+                <Button mnemonicParsing="false" styleClass="negative-button" stylesheets="@../css/MainStyle.css" text="X" />
             </children>
         </HBox>
       <TextArea fx:id="notesField" layoutX="322.0" layoutY="79.0" prefHeight="327.0" prefWidth="217.0" />
-      <Label layoutX="322.0" layoutY="54.0" prefHeight="25.0" prefWidth="217.0" stylesheets="@../css/mainStyle.css" text="Notes">
+      <Label layoutX="322.0" layoutY="54.0" prefHeight="25.0" prefWidth="217.0" stylesheets="@../css/MainStyle.css" text="Notes">
          <styleClass>
             <String fx:value="common-text-colour" />
             <String fx:value="common-text-font" />
@@ -70,21 +70,21 @@
             <Insets left="5.0" />
          </padding>
       </Label>
-      <Label layoutX="589.0" layoutY="58.0" prefHeight="17.0" prefWidth="149.0" stylesheets="@../css/mainStyle.css" text="Customer name">
+      <Label layoutX="589.0" layoutY="58.0" prefHeight="17.0" prefWidth="149.0" stylesheets="@../css/MainStyle.css" text="Customer name">
          <styleClass>
             <String fx:value="common-text-font" />
             <String fx:value="common-text-colour" />
          </styleClass>
       </Label>
       <TextField fx:id="cNameField" layoutX="589.0" layoutY="75.0" />
-      <Label layoutX="589.0" layoutY="113.0" prefHeight="17.0" prefWidth="149.0" stylesheets="@../css/mainStyle.css" text="Customer Email">
+      <Label layoutX="589.0" layoutY="113.0" prefHeight="17.0" prefWidth="149.0" stylesheets="@../css/MainStyle.css" text="Customer Email">
          <styleClass>
             <String fx:value="common-text-font" />
             <String fx:value="common-text-colour" />
          </styleClass>
       </Label>
       <TextField fx:id="cEmailField" layoutX="589.0" layoutY="130.0" />
-      <Label layoutX="589.0" layoutY="170.0" prefHeight="17.0" prefWidth="149.0" stylesheets="@../css/mainStyle.css" text="Customer Location">
+      <Label layoutX="589.0" layoutY="170.0" prefHeight="17.0" prefWidth="149.0" stylesheets="@../css/MainStyle.css" text="Customer Location">
          <styleClass>
             <String fx:value="common-text-font" />
             <String fx:value="common-text-colour" />
@@ -92,26 +92,26 @@
       </Label>
       <TextField fx:id="cLocField" layoutX="589.0" layoutY="187.0" />
       <ChoiceBox fx:id="selManagerBox" layoutX="589.0" layoutY="243.0" prefWidth="150.0" />
-      <Label layoutX="589.0" layoutY="226.0" prefHeight="17.0" prefWidth="149.0" stylesheets="@../css/mainStyle.css" text="Select Manager">
+      <Label layoutX="589.0" layoutY="226.0" prefHeight="17.0" prefWidth="149.0" stylesheets="@../css/MainStyle.css" text="Select Manager">
          <styleClass>
             <String fx:value="common-text-colour" />
             <String fx:value="common-text-font" />
          </styleClass>
       </Label>
-      <Button fx:id="saveBtn" layoutX="577.0" layoutY="370.0" mnemonicParsing="false" stylesheets="@../css/mainStyle.css" text="Save">
+      <Button fx:id="saveBtn" layoutX="577.0" layoutY="370.0" mnemonicParsing="false" stylesheets="@../css/MainStyle.css" text="Save">
          <styleClass>
             <String fx:value="positive-button" />
             <String fx:value="common-text-colour" />
             <String fx:value="common-text-font" />
          </styleClass></Button>
-      <Button fx:id="deleteBtn" layoutX="664.0" layoutY="370.0" mnemonicParsing="false" stylesheets="@../css/mainStyle.css" text="Delete Project">
+      <Button fx:id="deleteBtn" layoutX="664.0" layoutY="370.0" mnemonicParsing="false" stylesheets="@../css/MainStyle.css" text="Delete Project">
          <styleClass>
             <String fx:value="negative-button" />
             <String fx:value="common-text-colour" />
             <String fx:value="common-text-font" />
          </styleClass></Button>
       <ImageView fitHeight="140.0" fitWidth="267.0" layoutX="33.0" layoutY="88.0" pickOnBounds="true" preserveRatio="true" />
-      <Label layoutX="33.0" layoutY="63.0" prefHeight="25.0" prefWidth="267.0" stylesheets="@../css/mainStyle.css" text="Pictures">
+      <Label layoutX="33.0" layoutY="63.0" prefHeight="25.0" prefWidth="267.0" stylesheets="@../css/MainStyle.css" text="Pictures">
          <styleClass>
             <String fx:value="common-text-colour" />
             <String fx:value="common-text-font" />
@@ -122,21 +122,21 @@
          </padding>
       </Label>
       <Canvas height="140.0" layoutX="33.0" layoutY="251.0" width="267.0" />
-      <Button fx:id="addBtn" layoutX="33.0" layoutY="199.0" mnemonicParsing="false" stylesheets="@../css/mainStyle.css" text="Add">
+      <Button fx:id="addBtn" layoutX="33.0" layoutY="199.0" mnemonicParsing="false" stylesheets="@../css/MainStyle.css" text="Add">
          <styleClass>
             <String fx:value="project-button" />
             <String fx:value="common-text-colour" />
             <String fx:value="common-text-font" />
          </styleClass>
       </Button>
-      <Button fx:id="removeBtn" layoutX="242.0" layoutY="200.0" mnemonicParsing="false" stylesheets="@../css/mainStyle.css" text="Remove">
+      <Button fx:id="removeBtn" layoutX="242.0" layoutY="200.0" mnemonicParsing="false" stylesheets="@../css/MainStyle.css" text="Remove">
          <styleClass>
             <String fx:value="project-button" />
             <String fx:value="common-text-colour" />
             <String fx:value="common-text-font" />
          </styleClass>
       </Button>
-      <Button fx:id="drawBtn" layoutX="248.0" layoutY="370.0" mnemonicParsing="false" stylesheets="@../css/mainStyle.css" text="Draw">
+      <Button fx:id="drawBtn" layoutX="248.0" layoutY="370.0" mnemonicParsing="false" stylesheets="@../css/MainStyle.css" text="Draw">
          <styleClass>
             <String fx:value="project-button" />
             <String fx:value="common-text-colour" />
