--- a/src/pl/fxml/ProjectView.fxml
+++ b/src/pl/fxml/ProjectView.fxml
@@ -4,6 +4,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -17,38 +18,34 @@
     <children>
         <HBox alignment="CENTER_LEFT" layoutY="-1.0" prefHeight="34.0" prefWidth="528.0" styleClass="project-container" stylesheets="@../css/MainStyle.css" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="300.0" AnchorPane.topAnchor="0.0">
             <children>
-                <Button fx:id="refnumField" mnemonicParsing="false" prefHeight="25.0" prefWidth="218.0" stylesheets="@../css/MainStyle.css" text="Reference Number">
-               <HBox.margin>
-                  <Insets left="70.0" />
-               </HBox.margin>
+            <Label fx:id="lblRefNumber" alignment="CENTER" prefHeight="25.0" prefWidth="218.0" text="New Project">
                <styleClass>
-                  <String fx:value="project-button" />
-                  <String fx:value="common-text-colour" />
-                  <String fx:value="common-text-font" />
-               </styleClass></Button>
-                <Button fx:id="logoutBtn" mnemonicParsing="false" prefHeight="25.0" prefWidth="102.0" stylesheets="@../css/MainStyle.css" text="Logout">
-                    <HBox.margin>
-                        <Insets left="100.0" />
-                    </HBox.margin>
-               <styleClass>
-                  <String fx:value="project-button" />
                   <String fx:value="common-text-colour" />
                   <String fx:value="common-text-font" />
                </styleClass>
-                </Button>
+               <HBox.margin>
+                  <Insets left="100.0" />
+               </HBox.margin>
+            </Label>
             </children>
         </HBox>
-          <Button fx:id="goBack" mnemonicParsing="false" onAction="#goBackPressed" prefHeight="0.0" prefWidth="82.0" stylesheets="@../css/MainStyle.css" text="←" AnchorPane.leftAnchor="-10.0" AnchorPane.topAnchor="-10.0">
+          <Button fx:id="logoutBtn" mnemonicParsing="false" prefHeight="25.0" prefWidth="102.0" stylesheets="@../css/MainStyle.css" text="Logout" AnchorPane.rightAnchor="290.0" AnchorPane.topAnchor="3.0">
          <styleClass>
             <String fx:value="project-button" />
             <String fx:value="common-text-colour" />
             <String fx:value="common-text-font" />
          </styleClass>
+          </Button>
+          <Button fx:id="goBack" mnemonicParsing="false" onAction="#goBackPressed" prefHeight="0.0" prefWidth="82.0" stylesheets="@../css/MainStyle.css" text="←" AnchorPane.leftAnchor="-10.0" AnchorPane.topAnchor="-10.0">
+         <styleClass>
+            <String fx:value="project-button" />
+            <String fx:value="common-text-colour" />
+         </styleClass>
          <font>
             <Font size="24.0" />
          </font>
           </Button>
-        <Label fx:id="usernameLbl" alignment="CENTER" layoutX="528.0" layoutY="-1.0" prefHeight="34.0" prefWidth="149.0" stylesheets="@../css/MainStyle.css" text="Username">
+        <Label fx:id="usernameLbl" alignment="CENTER" layoutX="528.0" layoutY="-1.0" prefHeight="34.0" prefWidth="149.0" stylesheets="@../css/MainStyle.css" text="Username" AnchorPane.rightAnchor="125.0" AnchorPane.topAnchor="0.0">
          <styleClass>
             <String fx:value="common-text-colour" />
             <String fx:value="common-text-font" />
@@ -60,7 +57,7 @@
                 <Button mnemonicParsing="false" styleClass="negative-button" stylesheets="@../css/MainStyle.css" text="X" />
             </children>
         </HBox>
-      <TextArea fx:id="notesField" layoutX="322.0" layoutY="79.0" prefHeight="327.0" prefWidth="217.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="322.0" AnchorPane.rightAnchor="230.0" AnchorPane.topAnchor="80.0" />
+      <TextArea fx:id="txaNotes" layoutX="322.0" layoutY="79.0" prefHeight="327.0" prefWidth="217.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="322.0" AnchorPane.rightAnchor="230.0" AnchorPane.topAnchor="80.0" />
       <Label layoutX="322.0" layoutY="54.0" prefHeight="25.0" prefWidth="217.0" stylesheets="@../css/MainStyle.css" text="Notes" AnchorPane.leftAnchor="322.0" AnchorPane.rightAnchor="230.0" AnchorPane.topAnchor="54.0">
          <styleClass>
             <String fx:value="common-text-colour" />
@@ -77,35 +74,35 @@
             <String fx:value="common-text-colour" />
          </styleClass>
       </Label>
-      <TextField fx:id="cNameField" layoutX="589.0" layoutY="75.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="75.0" />
+      <TextField fx:id="txfCustomerName" layoutX="589.0" layoutY="75.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="75.0" />
       <Label layoutX="589.0" layoutY="113.0" prefHeight="17.0" prefWidth="149.0" stylesheets="@../css/MainStyle.css" text="Customer Email" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="115.0">
          <styleClass>
             <String fx:value="common-text-font" />
             <String fx:value="common-text-colour" />
          </styleClass>
       </Label>
-      <TextField fx:id="cEmailField" layoutX="589.0" layoutY="130.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="135.0" />
+      <TextField fx:id="txfCustomerEmail" layoutX="589.0" layoutY="130.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="135.0" />
       <Label layoutX="589.0" layoutY="170.0" prefHeight="17.0" prefWidth="149.0" stylesheets="@../css/MainStyle.css" text="Customer Location" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="165.0">
          <styleClass>
             <String fx:value="common-text-font" />
             <String fx:value="common-text-colour" />
          </styleClass>
       </Label>
-      <TextField fx:id="cLocField" layoutX="589.0" layoutY="187.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="185.0" />
-      <ChoiceBox fx:id="selManagerBox" layoutX="589.0" layoutY="243.0" prefWidth="150.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="245.0" />
-      <Label layoutX="589.0" layoutY="226.0" prefHeight="17.0" prefWidth="149.0" stylesheets="@../css/MainStyle.css" text="Select Manager" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="225.0">
+      <TextField fx:id="txfCustomerLocation" layoutX="589.0" layoutY="187.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="185.0" />
+      <ChoiceBox fx:id="chbSelectAccount" layoutX="589.0" layoutY="243.0" prefWidth="150.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="235.0" />
+      <Label layoutX="589.0" layoutY="226.0" prefHeight="17.0" prefWidth="149.0" stylesheets="@../css/MainStyle.css" text="Select Manager" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="215.0">
          <styleClass>
             <String fx:value="common-text-colour" />
             <String fx:value="common-text-font" />
          </styleClass>
       </Label>
-      <Button fx:id="saveBtn" layoutX="577.0" layoutY="370.0" mnemonicParsing="false" onAction="#saveBtnPressed" stylesheets="@../css/MainStyle.css" text="Save" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="140.0">
+      <Button fx:id="btnSave" layoutX="577.0" layoutY="370.0" mnemonicParsing="false" onAction="#btnSavePressed" stylesheets="@../css/MainStyle.css" text="Save" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="140.0">
          <styleClass>
             <String fx:value="positive-button" />
             <String fx:value="common-text-colour" />
             <String fx:value="common-text-font" />
          </styleClass></Button>
-      <Button fx:id="deleteBtn" layoutX="664.0" layoutY="370.0" mnemonicParsing="false" onAction="#deleteBtnPressed" stylesheets="@../css/MainStyle.css" text="Delete Project" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="30.0">
+      <Button fx:id="btnCancel" layoutX="664.0" layoutY="370.0" mnemonicParsing="false" onAction="#btnCancelPressed" stylesheets="@../css/MainStyle.css" text="Cancel" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="30.0">
          <styleClass>
             <String fx:value="negative-button" />
             <String fx:value="common-text-colour" />
@@ -115,7 +112,7 @@
          <children>
               
                         <ImageView fx:id="imvPictures" fitHeight="140.0" fitWidth="266.0" layoutX="-1.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true" />
-            <Button fx:id="addBtn" layoutX="-1.0" layoutY="123.0" mnemonicParsing="false" onAction="#addBtnPressed" stylesheets="@../css/MainStyle.css" text="Add">
+            <Button fx:id="btnAdd" layoutX="-1.0" layoutY="123.0" mnemonicParsing="false" onAction="#btnAddPressed" stylesheets="@../css/MainStyle.css" text="Add">
                <styleClass>
                   <String fx:value="grey-button" />
                   <String fx:value="common-text-colour" />
@@ -132,7 +129,7 @@
                   <Insets left="5.0" />
                </padding>
             </Label>
-            <Button fx:id="removeBtn" layoutX="209.0" layoutY="123.0" mnemonicParsing="false" onAction="#removeBtnPressed" stylesheets="@../css/MainStyle.css" text="Remove">
+            <Button fx:id="btnRemove" layoutX="209.0" layoutY="123.0" mnemonicParsing="false" onAction="#btnRemovePressed" stylesheets="@../css/MainStyle.css" text="Remove">
                <styleClass>
                   <String fx:value="grey-button" />
                   <String fx:value="common-text-colour" />
@@ -144,7 +141,7 @@
       <Pane layoutX="32.0" layoutY="271.0" prefHeight="140.0" prefWidth="267.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="30.0">
          <children>
             <ImageView fx:id="imvDrawing" fitHeight="140.0" fitWidth="267.0" pickOnBounds="true" preserveRatio="true" />
-            <Button fx:id="drawBtn" layoutX="225.0" layoutY="114.0" mnemonicParsing="false" onAction="#drawBtn" stylesheets="@../css/MainStyle.css" text="Draw">
+            <Button fx:id="btnDraw" layoutX="225.0" layoutY="114.0" mnemonicParsing="false" onAction="#btnDrawPressed" stylesheets="@../css/MainStyle.css" text="Draw">
                <styleClass>
                   <String fx:value="grey-button" />
                   <String fx:value="common-text-colour" />
@@ -153,5 +150,19 @@
             </Button>
          </children>
       </Pane>
+      <DatePicker fx:id="startDate" layoutX="590.0" layoutY="291.0" prefHeight="26.0" prefWidth="150.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="285.0" />
+      <DatePicker fx:id="endDate" layoutX="589.0" layoutY="338.0" prefHeight="26.0" prefWidth="150.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="335.0" />
+      <Label layoutX="589.0" layoutY="271.0" prefHeight="17.0" prefWidth="149.0" stylesheets="@../css/MainStyle.css" text="Start Date:" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="265.0">
+         <styleClass>
+            <String fx:value="common-text-colour" />
+            <String fx:value="common-text-font" />
+         </styleClass>
+      </Label>
+      <Label layoutX="590.0" layoutY="317.0" prefHeight="17.0" prefWidth="149.0" stylesheets="@../css/MainStyle.css" text="End Date:" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="315.0">
+         <styleClass>
+            <String fx:value="common-text-colour" />
+            <String fx:value="common-text-font" />
+         </styleClass>
+      </Label>
     </children>
 </AnchorPane>
